Fixing mysql connector path

--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/ADTi_DIN_Reto_CRUD_(Alex_Ekaitz_Kevin_Victor).jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.15.jar=../DIN_Reto_1_Factory_-Alex_Ekaitz-/Din_Reto_1_Factory/src/mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar=src/mysql-connector-java-8.0.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -80,7 +80,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=adti_din_reto_crud_.alex_ekaitz_kevin_victor.ADTi_DIN_Reto_CRUD_Alex_Ekaitz_Kevin_Victor
+javafx.main.class=main.Main
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
