--- a/ADTi_DIN_Reto_CRUD/build.xml
+++ b/ADTi_DIN_Reto_CRUD/build.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. --><project name="ADTi_DIN_Reto_CRUD_(Alex_Ekaitz_Kevin_Victor)" default="default" basedir="." xmlns:fx="javafx:com.sun.javafx.tools.ant">
-    <description>Builds, tests, and runs the project ADTi_DIN_Reto_CRUD_(Alex_Ekaitz_Kevin_Victor).</description>
+<?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. --><project name="ADTi_DIN_Reto_CRUD" default="default" basedir="." xmlns:fx="javafx:com.sun.javafx.tools.ant">
+    <description>Builds, tests, and runs the project ADTi_DIN_Reto_CRUD.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
