--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/nbproject/private
-/build/
-/dist/
+ADTi_DIN_Reto_CRUD/nbproject/private
+ADTi_DIN_Reto_CRUD/build/
+ADTi_DIN_Reto_CRUD/dist/
 
 *.dio
