--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/ADTi_DIN_Reto_CRUD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-dbcp2-2.9.0.jar=src/commons-dbcp2-2.9.0.jar
+file.reference.commons-pool2-2.11.1.jar=src/commons-pool2-2.11.1.jar
 file.reference.mysql-connector-java-8.0.15.jar=src/mysql-connector-java-8.0.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +38,9 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.commons-dbcp2-2.9.0.jar}:\
+    ${file.reference.commons-pool2-2.11.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
