--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -29,9 +29,9 @@ dist.jar=${dist.dir}/ADTi_DIN_Reto_CRUD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-dbcp2-2.13.0.jar=src/commons-dbcp2-2.13.0.jar
-file.reference.commons-pool2-2.12.1.jar=src/commons-pool2-2.12.1.jar
-file.reference.mysql-connector-java-8.0.15.jar=src/mysql-connector-java-8.0.15.jar
+file.reference.commons-dbcp2-2.13.0.jar=src/lib/commons-dbcp2-2.13.0.jar
+file.reference.commons-pool2-2.12.1.jar=src/lib/commons-pool2-2.12.1.jar
+file.reference.mysql-connector-java-8.0.15.jar=src/lib/mysql-connector-java-8.0.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,8 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${file.reference.commons-dbcp2-2.13.0.jar}:\
-    ${file.reference.commons-pool2-2.12.1.jar}
+    ${file.reference.commons-pool2-2.12.1.jar}:\
+    ${file.reference.commons-dbcp2-2.13.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
