--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-dbcp2-2.13.0.jar=src/lib/commons-dbcp2-2.13.0.jar
+file.reference.commons-logging-1.3.5.jar=src/lib/commons-logging-1.3.5.jar
 file.reference.commons-pool2-2.12.1.jar=src/lib/commons-pool2-2.12.1.jar
 file.reference.mysql-connector-java-8.0.15.jar=src/lib/mysql-connector-java-8.0.15.jar
 includes=**
@@ -40,7 +41,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
-    ${file.reference.commons-dbcp2-2.13.0.jar}
+    ${file.reference.commons-dbcp2-2.13.0.jar}:\
+    ${file.reference.commons-logging-1.3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
