--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -42,7 +42,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
-    ${file.reference.commons-logging-1.3.5.jar}
+    ${file.reference.commons-logging-1.3.5.jar}:\
+    ${libs.FxTest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +54,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
