--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -55,7 +55,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.FxTest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
