Adding local test libraries

--- a/ADTi_DIN_Reto_CRUD/nbproject/project.properties
+++ b/ADTi_DIN_Reto_CRUD/nbproject/project.properties
@@ -32,7 +32,11 @@ excludes=
 file.reference.commons-dbcp2-2.13.0.jar=src/lib/commons-dbcp2-2.13.0.jar
 file.reference.commons-logging-1.3.5.jar=src/lib/commons-logging-1.3.5.jar
 file.reference.commons-pool2-2.12.1.jar=src/lib/commons-pool2-2.12.1.jar
+file.reference.hamcrest-junit-2.0.0.0.jar=src/lib/hamcrest-junit-2.0.0.0.jar
+file.reference.java-hamcrest-2.0.0.0.jar=src/lib/java-hamcrest-2.0.0.0.jar
 file.reference.mysql-connector-java-8.0.15.jar=src/lib/mysql-connector-java-8.0.15.jar
+file.reference.testfx-core-4.0.13-alpha.jar=src/lib/testfx-core-4.0.13-alpha.jar
+file.reference.testfx-junit-4.0.13-alpha.jar=src/lib/testfx-junit-4.0.13-alpha.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -42,8 +46,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
-    ${file.reference.commons-logging-1.3.5.jar}:\
-    ${libs.FxTest.classpath}
+    ${file.reference.commons-logging-1.3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,8 +58,11 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.FxTest.classpath}
+    ${file.reference.hamcrest-junit-2.0.0.0.jar}:\
+    ${file.reference.java-hamcrest-2.0.0.0.jar}:\
+    ${file.reference.testfx-core-4.0.13-alpha.jar}:\
+    ${file.reference.testfx-junit-4.0.13-alpha.jar}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
